# orbis

./: .env.example  .gitignore  CLAUDE.md  ORBIS_CORE.md  ORBIS_CORE_EXTRACTION_PLAN.md  README.md  pyproject.toml  requirements.md
.claude/: settings.local.json
orbis/: CLAUDE.md  Dockerfile  Dockerfile.poller  README.md  docker-compose.yml  docker-setup.sh  env.template  main.py  poller.py  pyproject.toml
orbis-core/: README.md  pyproject.toml
orbis-core/src/orbis_core/: __init__.py
orbis-core/src/orbis_core/connectors/azure_devops/: __init__.py  azure_devops_client.py  client.py
orbis-core/src/orbis_core/database/: __init__.py  session.py
orbis-core/src/orbis_core/embedding/: __init__.py  embedding_service.py  text_chunking.py
orbis-core/src/orbis_core/llm/: openai_client.py
orbis-core/src/orbis_core/scheduling/: __init__.py  scheduler_service.py
orbis-core/src/orbis_core/search/: __init__.py  bm25_service.py  hybrid_search_service.py  rerank_service.py
orbis-core/src/orbis_core/utils/: constants.py  content_hash.py  logging.py  progress_tracker.py  similarity.py  token_utils.py
orbis-main/: .cursorrules  .gitignore  Dockerfile  Dockerfile.poller  README.md  docker-setup.sh  main.py  pyproject.toml  requirements-poller.txt  requirements.txt
orbis-main/app/api/routers/: health.py  process.py  scheduler.py
orbis-main/app/db/: models.py
orbis-main/config/: __init__.py
orbis-main/config/connector_instances/: gpc_support_workitems.yaml  hxgn_oncall_wiki.yaml  hxgn_oncall_workitems.yaml  intergraph_oncall_administrator.yaml  intergraph_oncall_dispatcher.yaml
orbis-main/config/connector_templates/: azdo_wiki_template.yaml
orbis-main/core/agents/: __init__.py  documentation_aggregator.py  scope_analyzer.py  summary_agent.py
orbis-main/core/services/: generic_content_service.py  project_detection.py
orbis-main/docs/: AGENTIC_RAG_IMPLEMENTATION.md  CONNECTOR_INTERFACE_STANDARD.md
orbis-main/infrastructure/connectors/azure_devops/: azure_devops_client.py  azure_devops_wiki_client.py  constants.py  wiki_service.py  work_item_service.py
orbis-main/infrastructure/connectors/oncall_web_help/: __init__.py  web_help_service.py
orbis-main/infrastructure/data_processing/: __init__.py  data_source_service.py  scheduler_service.py
orbis-main/infrastructure/storage/: rerank_service.py
orbis-main/prompts/: routing_recommendations.yaml
orbis-main/scripts/: azdo_field_discovery.py
orbis-main/utils/: app_setup.py  constants.py  env.py  prompt_loader.py  similarity.py
orbis-search/: .cursorrules  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.poller  GEMMA_IMPLEMENTATION_PLAN.md  README.md  config.py  docker-compose.yml  docker-setup.sh  main.py  poller.py  pyproject.toml  requirements-poller.txt  requirements.txt
orbis-search/.github/workflows/: deploy.yml
orbis-search/app/: __init__.py
orbis-search/app/api/: __init__.py  dependencies.py
orbis-search/app/api/routers/: datasources.py  embedding.py  field_discovery.py  health.py  ingestion.py  provider.py  scheduler.py  search.py
orbis-search/app/core/: __init__.py  container.py
orbis-search/app/db/: models.py  session.py
orbis-search/docs/: ARCHITECTURE_DIAGRAMS.md  DATABASE_SCHEMA_AND_WORKFLOWS.md  EMBEDDING_CONFIGURATION_GUIDE.md  SEARCH_AND_FILTERING_ARCHITECTURE.md
orbis-search/models/: __init__.py  schemas.py
orbis-search/scripts/: generate_score_histograms.py
orbis-search/services/: azure_devops_client.py  bm25_service.py  data_ingestion_service.py  data_source_service.py  embedding_service.py  field_discovery_service.py  hybrid_search_service.py  rerank_service.py  scheduler_service.py  service_container.py  summary_service.py  text_chunking.py  vector_service.py  work_item_service.py
orbis/app/api/: dependencies.py
orbis/app/api/routers/: embedding.py  health.py  ingestion.py  process.py  scheduler.py
orbis/app/db/: __init__.py  models.py  session.py
orbis/config/: __init__.py  data_sources.json.legacy  project_config.yaml  settings.py
orbis/config/connector_instances/: intergraph_oncall_administrator.yaml  intergraph_oncall_dispatcher.yaml
orbis/config/connector_templates/: azdo_workitems_template.yaml  oncall_web_help_template.yaml
orbis/core/: schemas.py
orbis/core/agents/: __init__.py  documentation_aggregator.py  llm_routing_agent.py  orchestrator.py  scope_analyzer.py  summary_agent.py  wiki_summarization.py
orbis/core/config/: data_sources.py
orbis/core/services/: __init__.py  generic_content_service.py  generic_data_ingestion.py  generic_multi_modal_search.py  project_detection.py
orbis/docs/: AGENTIC_RAG_IMPLEMENTATION.md  AGENTIC_RAG_SYSTEM_DIAGRAM.md  AGENTIC_RAG_SYSTEM_DIAGRAM_CURRENT_STATE.md  CONNECTOR_INTERFACE_STANDARD.md  MISTRAL_DOCUMENT_AI_IMPLEMENTATION_FINAL.md  SIMPLIFIED_ARCHITECTURE.md
orbis/engine/: schemas.py
orbis/engine/agents/: __init__.py  documentation_aggregator.py  llm_routing_agent.py  orchestrator.py  query_analyzer.py  scope_analyzer.py  summary_agent.py  wiki_summarization.py
orbis/engine/config/: data_sources.py
orbis/engine/services/: config_loader.py  generic_content_service.py  generic_data_ingestion.py  generic_multi_modal_search.py  project_detection.py
orbis/infrastructure/connectors/azure_devops/: __init__.py  auth.py  azure_devops_wiki_client.py  wiki_client.py  wiki_service.py  work_item_service.py
orbis/infrastructure/connectors/oncall_web_help/: web_help_service.py
orbis/infrastructure/data_processing/: __init__.py  data_source_service.py  scheduler_service.py
orbis/infrastructure/llm/: __init__.py  openai_client.py
orbis/infrastructure/storage/: __init__.py  cross_collection_rerank_service.py  embedding_service.py  generic_vector_service.py  rerank_service.py
orbis/prompts/: routing_recommendations.yaml  scope_analysis.yaml  summary_generation.yaml  wiki_batch_summarization.yaml  wiki_comprehensive_summarization.yaml
orbis/utils/: app_setup.py  constants.py  content_hash.py  data_paths.py  logging.py  token_utils.py
