[project]
name = "orbis-search"
version = "1.1.0"
description = "Lightweight hybrid search engine for Azure DevOps using BM25 and semantic search"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "chromadb==1.0.15",
    "openai==1.98.0",
    "pydantic==2.11.7",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "msal>=1.20.0",
    "sqlalchemy>=2.0.0",
    "cryptography>=43.0.0",
    "sentence-transformers==5.1.0",
    "torch",
    "hf_xet",
    "bm25s>=0.2.14"
]

[tool.uv]
index-url = "https://pypi.org/simple/"

[tool.uv.sources]
torch = { index = "pytorch-cu129" }

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
