[project]
name = "orbis"
version = "0.1.0"
description = "Advanced agentic RAG system for Azure DevOps tickets with multi-agent workflows and contextual analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "orbis-core",
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "chromadb==1.0.20",
    "openai>=2.1.0",
    "pydantic==2.11.7",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.0",
    "hf-xet>=1.1.10",
    "markdown",
    "bs4",
    "pillow>=11.3.0",
    "pyyaml>=6.0.0",
]
[project.optional-dependencies]
ml = [
    "sentence-transformers==5.1.0",
    "torch"
]

[tool.uv]
index-url = "https://pypi.org/simple/"

[tool.uv.sources]
orbis-core = { workspace = true }
torch = { index = "pytorch-cu129" }

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
